# opengl

./: .gitignore  opengl.sln
opengl/: CMakeLists.txt  imgui.ini  opengl.vcxproj  opengl.vcxproj.filters
opengl/include/: IndexBuffer.h  Render.h  Shader.h  Texture.h  VertexArray.h  VertexBuffer.h  VertexBufferLayout.h  common.h  imguicfg.h  mesh.h
opengl/res/shaders/: Basics.shader  depth.shader  framebuffer.shader  framebuffer2.shader
opengl/res/shaders/shadowMap/: depthMap.shader  shadow.shader
opengl/src/: Application.cpp  IndexBuffer.cpp  IndexBuffer.h  Render.cpp  Render.h  Shader.cpp  Shader.h  Texture.cpp  VertexArray.cpp  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h  imguicfg.cpp
opengl/src/test/: Test.cpp  Test.h  TestBatch.cpp  TestBatch.h  TestClearColor.cpp
opengl/test/: depth.cpp  frameBuffer.cpp  shadowMap.cpp  stencil_test.cpp  test.cpp  testmain.cpp  transpancy.cpp
opengl/test/test/: TestBatch.cpp  TestBatch.h  TestClearColor.h
